# 6502_emulator

./: CMakeLists.txt  README.md
.github/workflows/: .tests.yml
src/: datatypes.hpp  main_6502.cpp
src/cpu/: cpu.cpp  cpu.hpp
src/cpu/test/: test_cpu.cpp
src/memory/: memory.cpp  memory.hpp
src/memory/test/: test_memory.cpp
